Fix flex wrapping

--- a/links/links.css
+++ b/links/links.css
@@ -47,7 +47,6 @@ div#main {
 /* Flexbox style */
 .columns {
 	display: flex;
-	flex-wrap: wrap;
 	width: 100%;
 }
 .column {
